targets/srv0/k3s/nfs-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: base
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: ghcr.io/trexx/docker-nfs-server:v3.22.2-2
          ports:
            - name: nfsv4
              containerPort: 2049
              protocol: TCP
          securityContext:
            privileged: true
          readinessProbe:
            tcpSocket:
              port: 2049
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 2049
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          volumeMounts:
            - mountPath: /exports
              name: exports-root
            - mountPath: /exports/music
              name: music-storage
            - mountPath: /exports/jellyfin-tv
              name: tv-storage
            - mountPath: /exports/jellyfin-youtube
              name: youtube-storage
            - mountPath: /exports/dscpln
              name: dscpln-storage
            - mountPath: /exports/k3s-state
              name: k3s-state-storage
            - mountPath: /var/lib/nfs/etab
              name: nfs-exports
              subPath: etab
              readOnly: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: hostpath-main
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
        - name: exports-root
          emptyDir: {}
        - name: nfs-exports
          configMap:
            name: nfs-etab
        - name: music-storage
          hostPath:
            path: $MEDIA_DIR_PATH/Music
            type: DirectoryOrCreate
        - name: tv-storage
          hostPath:
            path: $MEDIA_DIR_PATH/TV
            type: DirectoryOrCreate
        - name: youtube-storage
          hostPath:
            path: $MEDIA_DIR_PATH/YouTube
            type: DirectoryOrCreate
        - name: dscpln-storage
          hostPath:
            path: $DSCPLN_TRANSACTIONS_PATH
            type: DirectoryOrCreate
        - name: k3s-state-storage
          hostPath:
            path: $K3S_STATE_DIR
            type: DirectoryOrCreate
